# SIQUR

./: .gitignore  .impeccable.md  .mcp.json  API_SCHEMA.md  GEMINITHISISFRONTEND.md  README.md  rohan.md  types.ts
.aidesigner/runs/: building-view-design.html  camera-view-design.html  globe-view-design.html
.claude/: CLAUDE.md  settings.local.json  understanding.md
.playwright-mcp/: page-2026-04-04T07-03-39-515Z.yml  page-2026-04-04T07-03-47-158Z.yml  page-2026-04-04T07-03-49-846Z.yml  page-2026-04-04T07-04-12-422Z.yml  page-2026-04-04T07-04-55-482Z.yml  page-2026-04-04T07-08-53-188Z.yml  page-2026-04-04T07-09-30-623Z.yml  page-2026-04-04T07-11-12-422Z.yml  page-2026-04-04T07-14-10-618Z.yml  page-2026-04-04T07-15-25-802Z.yml  page-2026-04-04T07-15-59-245Z.yml  page-2026-04-04T07-17-47-092Z.yml
CameraPlacementAlgorithm/: .gitignore  __init__.py  geometry.py  models.py  placement.py  pyproject.toml  requirements.txt  visibility.py
SyntheticDataset/video-gen/: start_worker.sh
backend/CameraPlacementAlgorithm/: .gitignore  README.md  floorplan.py  main.py  optimizer.py  output.py  requirements.txt  visibility.py
backend/MetaSAM/: CLAUDE.md  README.md  app.py
backend/SyntheticDataset/: .gitignore  README.md  generate_dataset.py  start.sh  start_app.sh  start_worker.sh
backend/Watchman/: .gitignore  README.md  start.sh  test_footage.py
backend/bespoke-camera-ai/: dataset.py  export_onnx.py  model.py  predict.py  requirements.txt  (+1 more)
frontend/: .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
whitepaper/: siqur.tex
(+77 files in other folders)
