[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "camera-placement-algorithm"
version = "0.1.0"
description = "Greedy line-of-sight camera placement for surveillance systems"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
# pyproject.toml lives inside the package folder, so look one level up
# to find the CameraPlacementAlgorithm package.
# Install from the monorepo root:  pip install -e ./CameraPlacementAlgorithm
# Install from inside this folder: pip install -e ..
where = [".."]
include = ["CameraPlacementAlgorithm*"]
